# IRTK

Modules/Regularisation/: CMakeLists.txt
Modules/Regularisation/applications/: CMakeLists.txt  denseCRFRegularisation.cc  denseCrf3DInferenceOnNiis.cpp
Modules/Regularisation/include/: densecrf.h
Modules/Regularisation/src/: CMakeLists.txt  densecrf.cpp
